# git-frisky

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/desktop/src-tauri/: Cargo.toml  Cargo.toml.bak  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/api/: mod.rs  repo.rs  watch.rs
apps/desktop/src-tauri/src/domain/: types.rs
apps/ui/: package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/ui/src/: App.tsx  index.css
apps/ui/src/components/command/: CommandPalette.tsx
apps/ui/src/components/commit/: CommitBox.tsx
apps/ui/src/components/diff/: DiffViewer.tsx
apps/ui/src/components/graph/: CommitDetails.tsx  CommitGraph.tsx  CommitRow.tsx  GraphLanes.tsx
apps/ui/src/components/layout/: AppShell.tsx  Inspector.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
apps/ui/src/components/tree/: FileTree.tsx
apps/ui/src/components/ui/: EmptyState.tsx  LoadingStates.tsx
apps/ui/src/lib/: ipc.ts  laneLayout.ts
apps/ui/src/stores/: repo.ts
docs/decisions/: 000-template.md
scripts/: check-env.sh
