[package]
name = "gitfrisky-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Git operations
git2 = "0.18"

# File system watching
notify = "6.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI (V1.5)
reqwest = { version = "0.11", features = ["json"] }

# OS keychain access
keyring = "2.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
